feature: add ignite member (#12)
* add basic ignite member as separted module

* exclude ignite working directory

* add cache hello world example