@@ -9,21 +9,35 @@ group = 'it.gov.pagopa'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+allprojects {
+	repositories {
+		mavenCentral()
+		maven { url 'https://repo.spring.io/milestone' }
+		maven { url 'https://repo.spring.io/snapshot' }
+		maven {
+			url "https://www.gridgainsystems.com/nexus/content/repositories/external"
+		}
+	}
+}
+
+// apply same spring boot version to submodule
+subprojects {
+	apply(plugin: 'org.springframework.boot')
+	apply(plugin: 'io.spring.dependency-management')
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
 }
 
-repositories {
-	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
-	maven { url 'https://repo.spring.io/snapshot' }
-}
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation project(path: ":ignite-member")
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -31,4 +45,20 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// https://ignite.apache.org/docs/latest/quick-start/java#running-ignite-with-java-11-or-later
+tasks.withType(JavaExec).configureEach {
+	jvmArgs = [
+			"--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+			"--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+			"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+			"--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+			"--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+			"--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+			"--add-opens=java.base/java.io=ALL-UNNAMED",
+			"--add-opens=java.base/java.nio=ALL-UNNAMED",
+			"--add-opens=java.base/java.util=ALL-UNNAMED",
+			"--add-opens=java.base/java.lang=ALL-UNNAMED"
+	]
 }
